--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/siteload.css">
 
 
-    <title>Tim Baker Development</title>
+    <title>Wilds Rincon | Fullstack React Developer</title>
   </head>
 
   <body>
