--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/default.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/siteload.css">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/layout.css">
+    <link rel="stylesheet" href="../css/media-queries.css">
+    <link rel="stylesheet" href="../css/magnific-popup.css">
+    <link rel="stylesheet" href="../css/siteload.css">
 
 
     <title>Wilds Rincon | Fullstack React Developer</title>
@@ -23,7 +23,7 @@
 
     <div class='siteLoading' id="siteLoading">
       <div class="siteLoading-frame">
-        <img class='siteLoading-image' src='%PUBLIC_URL%/images/loader.gif' alt="loader" />
+        <img class='siteLoading-image' src='./images/loader.gif' alt="loader" />
       </div>
     </div>
 
